tests/single_instruction_translation_validation/mcsema/register-variants/sqrtss_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:200:25: error: use of undefined value '@sqrtf'
  %26 = tail call float @sqrtf(float %7) #25
                        ^
0.02user 0.01system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 27812maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
